# ouilookup

./: .gitignore  INSTALL.html  INSTALL.md  MANUAL.html  MANUAL.md  Makefile  README.html  README.md  __init__.py  __main__.py  env  ouilookup.py  pyproject.toml  test.py
docs/: Makefile
docs/defaults/: typ.yaml
docs/install/: 00-metadata.md  10-prerequisites.md  21-install-linux.md  22-install-windows.md  23-install-macos.md  31-uninstall-linux.md  32-uninstall-windows.md  33-uninstall-macos.md  40-extra-info.md
docs/man/: 40-examples.md  build_man_page.py
docs/man/template/: template.md
docs/readme/: 00-metadata.md  01-title.md  10-description.md  20-features.md  40-installing.md  50-usage.md  60-examples.md
docs/templates/: default.typst
examples/: bad.txt  macs.txt
man/: ouilookup.1
releases/: ouilookup-0.0.5-py3-none-any.whl  ouilookup.pyz  release_notes.txt
shell-completions/: Makefile  generate_completion.py
shell-completions/bash/: ouilookup
shell-completions/fish/: ouilookup
shell-completions/zsh/: ouilookup
