[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouilookup"
description = "Tool to obtain vendor name / organizationally unique identifier (OUI) for MAC addresses"
dynamic = ["version"]
authors = [
    {name="Todd Wintermute"}
    ]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "ouilookup",
    "OUI",
    "MAC",
    "Ethernet",
    ]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: System :: Networking",
]
[project.urls]
Homepage = "None"

[project.scripts]
ouilookup = "ouilookup:main"

[project.entry-points."pipx.run"]
ouilookup = "ouilookup:main"

[tool.hatch.version]
path = "src/ouilookup/ouilookup.py"

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "man",
    "INSTALL.md",
    "MANUAL.md",
    "README.md",
    ]
artifacts = [
    "man/ouilookup.1",
    "man/ouilookup.1.gz",
    "INSTALL.md",
    "MANUAL.md",
    "README.md",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
#packages = ["src/ouilookup"]

[tool.hatch.build.targets.wheel.shared-data]
"man/ouilookup.1" = "share/man/man1/ouilookup.1"
#"man/ouilookup.1.gz" = "share/man/man1/ouilookup.1.gz"
#"INSTALL.md" = "share/doc/ouilookup/INSTALL.md"
#"MANUAL.md" = "share/doc/ouilookup/MANUAL.md"
#"README.md" = "share/doc/ouilookup/README.md"
"src/ouilookup/shell-completions/bash/ouilookup" = "share/bash-completion/completions/ouilookup"
"src/ouilookup/shell-completions/zsh/ouilookup" = "share/zsh/site-functions/_ouilookup"
"src/ouilookup/shell-completions/fish/ouilookup" = "share/fish/vendor_completions.d/ouilookup.fish"
